samples/_failures_safe/1761717475_74d3bf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e7aa34f.c: In function ‘main’:
./samples/SAFE/__tmp_8e7aa34f.c:166:9: error: missing terminating " character
  166 |         "BFS Tra
      |         ^~~~~~~~
./samples/SAFE/__tmp_8e7aa34f.c:166:9: error: expected expression at end of input
./samples/SAFE/__tmp_8e7aa34f.c:166:9: error: expected declaration or statement at end of input
